# AML_Assignment4

./: .gitignore  Pipfile  README.md  dataset_feature_extraction.ipynb  evaluation.ipynb  extraction.ipynb  iic.ipynb  pyproject.toml  requirements.txt  training.ipynb  training_and_prediction.ipynb
modules/: utils.py
results/: results_block4_pool  results_block5_pool
