[tool.poetry]
name = "AML_Assignment4"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
tensorflow = "^2.4.0"
Keras = "^2.4.3"
jupyterlab = "^2.2.9"
ipykernel = "^5.4.2"
xgboost = "^1.3.0"
scikit-learn = "^0.23.2"
Pillow = "^8.0.1"
pylint = "^2.6.0"
tqdm = "^4.54.1"
pandas = "^1.1.5"
seaborn = "^0.11.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
